# hw06-isaacdsloan

./: .buildinfo  Makefile  README.html  README.md  _config.yml  _toc.yml  conf.py  environment.yml  genindex.html  hw06-description.html  index.html  index.ipynb  intro.html  intro.md  markdown.html  notebooks.html  objects.inv  requirements.txt  search.html  searchindex.js
.doctrees/: README.doctree  hw06-description.doctree  index.doctree
.github/workflows/: book.yml
_build/.doctrees/: environment.pickle  index.doctree  intro.doctree  notebooks.doctree
_build/html/: .buildinfo  README.html  genindex.html  hw06-description.html  index.html  intro.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: environment.pickle  intro.doctree  markdown.doctree  notebooks.doctree
_build/html/_sources/: index.ipynb  intro.md
_build/jupyter_execute/: index.ipynb  index.py  notebooks.ipynb
_sources/: intro.md
ligotools/: setup.cfg
ligotools/ligotools/: __init__.py  utils.py
ligotools/ligotools/tests/: test_readligo.py
ligotools/ligotools2/: __init__.py  utils.py
ligotools/ligotools2/tests/: test_readligo.py  test_utils.py
ligotools2/: setup.cfg
ligotools2/ligotools2/: utils.py
ligotools2/ligotools2/tests/: test_utils.py
