# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = ligotools2
version          = attr: ligotools2.__version__
author           = Ligo Scientific Collaboration (LSC) and Isaac Sloan
author_email     = isaacdsloan@berkeley.edu
description      = A Python library to load ligo data 
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 2
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = == 2.7.15
install_requires = 
        numpy
        scipy
        matplotlib
        h5py



